--- a/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
+++ b/Sams_Project/Plugins/com.sam.finalyearproject/src/internal/Sams_ViewControls.ui
@@ -50,7 +50,7 @@ font-weight: bold;</string>
       <string notr="true"/>
      </property>
      <property name="currentIndex">
-      <number>2</number>
+      <number>1</number>
      </property>
      <property name="tabSpacing">
       <number>6</number>
@@ -1614,7 +1614,7 @@ font-weight: normal;</string>
           <item>
            <widget class="QToolBox" name="toolBoxReconstruct">
             <property name="currentIndex">
-             <number>0</number>
+             <number>1</number>
             </property>
             <widget class="QWidget" name="pageReconstructExecutable">
              <property name="geometry">
@@ -1803,8 +1803,8 @@ color: rgb(0, 150, 0);</string>
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>171</width>
-               <height>72</height>
+               <width>476</width>
+               <height>448</height>
               </rect>
              </property>
              <attribute name="label">
@@ -1817,14 +1817,42 @@ color: rgb(0, 150, 0);</string>
               <item>
                <widget class="QWidget" name="widgetReconstructLandmarks" native="true">
                 <layout class="QVBoxLayout" name="verticalLayout_5">
+                 <property name="topMargin">
+                  <number>0</number>
+                 </property>
                  <item>
                   <widget class="QWidget" name="widgetReconstructLandmarksScanWrapper" native="true">
                    <layout class="QHBoxLayout" name="horizontalLayout_9">
+                    <property name="margin">
+                     <number>0</number>
+                    </property>
                     <item>
-                     <widget class="QComboBox" name="comboBox"/>
+                     <widget class="QLabel" name="labelReconstructDescription_2">
+                      <property name="styleSheet">
+                       <string notr="true">font-weight: bold;</string>
+                      </property>
+                      <property name="text">
+                       <string>How many slice stacks do you have?</string>
+                      </property>
+                      <property name="textFormat">
+                       <enum>Qt::AutoText</enum>
+                      </property>
+                      <property name="scaledContents">
+                       <bool>false</bool>
+                      </property>
+                      <property name="alignment">
+                       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+                      </property>
+                      <property name="wordWrap">
+                       <bool>true</bool>
+                      </property>
+                      <property name="textInteractionFlags">
+                       <set>Qt::LinksAccessibleByMouse|Qt::TextSelectableByMouse</set>
+                      </property>
+                     </widget>
                     </item>
                     <item>
-                     <widget class="QSpinBox" name="spinBox">
+                     <widget class="QSpinBox" name="spinBoxMarkLandmarksNumStacks">
                       <property name="maximumSize">
                        <size>
                         <width>55</width>
@@ -1835,7 +1863,7 @@ color: rgb(0, 150, 0);</string>
                        <set>Qt::AlignCenter</set>
                       </property>
                       <property name="buttonSymbols">
-                       <enum>QAbstractSpinBox::NoButtons</enum>
+                       <enum>QAbstractSpinBox::UpDownArrows</enum>
                       </property>
                       <property name="minimum">
                        <number>1</number>
@@ -1852,17 +1880,24 @@ color: rgb(0, 150, 0);</string>
                   </widget>
                  </item>
                  <item>
-                  <spacer name="verticalSpacer_2">
-                   <property name="orientation">
-                    <enum>Qt::Vertical</enum>
+                  <widget class="QToolBox" name="toolBoxMarkLandmarks">
+                   <property name="currentIndex">
+                    <number>0</number>
                    </property>
-                   <property name="sizeHint" stdset="0">
-                    <size>
-                     <width>20</width>
-                     <height>40</height>
-                    </size>
-                   </property>
-                  </spacer>
+                   <widget class="QWidget" name="SliceStack1">
+                    <property name="geometry">
+                     <rect>
+                      <x>0</x>
+                      <y>0</y>
+                      <width>458</width>
+                      <height>371</height>
+                     </rect>
+                    </property>
+                    <attribute name="label">
+                     <string>Slice Stack #1</string>
+                    </attribute>
+                   </widget>
+                  </widget>
                  </item>
                 </layout>
                </widget>
@@ -1874,8 +1909,8 @@ color: rgb(0, 150, 0);</string>
               <rect>
                <x>0</x>
                <y>0</y>
-               <width>476</width>
-               <height>448</height>
+               <width>280</width>
+               <height>184</height>
               </rect>
              </property>
              <attribute name="label">
@@ -1984,7 +2019,7 @@ QPushButton:pressed {
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>-1633</y>
+        <y>-811</y>
         <width>481</width>
         <height>2213</height>
        </rect>
@@ -3598,7 +3633,6 @@ QPushButton:checked {
 	border-style: inset;
 	background-color: rgb(255, 0, 0);
 }
-
 
 </string>
                   </property>
